--- a/effect/mouse02.html
+++ b/effect/mouse02.html
@@ -1,160 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mouse Effect</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mouse Effect</title>
+    <link rel="stylesheet" href="assets/css/mouse.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 
-  <style>
-    body {
-      /* cursor: none; */
-    }
+    <style>
+        body {
+            /* cursor: none; */
+        }
 
-    .main__inner {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+        .main__inner {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
-    .main__inner p {
-      color: #fff;
-      font-size: 25vmax;
-      text-align: center;
-      font-family: "Chakra Petch", sans-serif;
-      font-weight: 900;
-      margin-left: -10vw;
-      letter-spacing: -1vw;
-    }
+        .main__inner p {
+            color: #d2d2d2;
+            font-size: 30vmax;
+            text-align: center;
+            font-family: "Chakra Petch", sans-serif;
+            font-weight: 900;
+            margin-left: -10vw;
+            letter-spacing: -1vw;
+        }
 
-    .main__info {
-      position: absolute;
-      left: 16px;
-      top: 68px;
-      font-size: 14px;
-      width: 100%;
-    }
+        .main__info {
+            position: absolute;
+            left: 16px;
+            top: 68px;
+            font-size: 14px;
+            width: 100%;
+        }
 
-    .main__info ul {
-      display: flex;
-      flex-wrap: wrap;
-    }
+        .main__info ul {
+            display: flex;
+            flex-wrap: wrap;
+        }
 
-    .main__info ul li {
-      width: 25%;
-      text-transform: uppercase;
-      font-family: 'Montserrat';
-      color: #dbdbdb;
-      font-weight: 200;
-    }
+        .main__info ul li {
+            width: 25%;
+            text-transform: uppercase;
+            font-family: 'Montserrat';
+            color: #dbdbdb;
+            font-weight: 200;
+        }
 
-    .cursor {
-      width: 100px;
-      height: 100px;
-      background-color: #ffffff43;
-      border: 1px solid #ffffff20;
-      backdrop-filter: blur(5px);
-      position: absolute;
-      left: 10px;
-      top: 10px;
-      border-radius: 50%;
-      z-index: 10000;
-      user-select: none;
-      pointer-events: none;
-      transition:
-        transform 0.5s,
-        background-color 0.3s,
-        border 0.3s,
-        border-radius 0.3s;
-    }
+        .cursor {
+            width: 100px;
+            height: 100px;
+            background-color: #efcee9;
+            border: 1px solid #ffffff20;
+            backdrop-filter: blur(5px);
+            position: absolute;
+            left: -100px;
+            top: -100px;
+            border-radius: 50%;
+            z-index: 10000;
+            user-select: none;
+            pointer-events: none;
+            transition:
+                transform 0.5s,
+                background-color 0.3s,
+                border 0.3s,
+                border-radius 0.3s,
+                width 0.3s,
+                height 0.3s,
+        }
 
-    .cursor::before {
-      content: '';
-      width: 20px;
-      height: 1px;
-      background-color: #fff;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
+        .cursor::before {
+            content: '';
+            width: 20px;
+            height: 1px;
+            background-color: #fff;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
 
-    .cursor::after {
-      content: '';
-      width: 1px;
-      height: 20px;
-      background-color: #fff;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-  </style>
+        .cursor::after {
+            content: '';
+            width: 1px;
+            height: 20px;
+            background-color: #fff;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 
 <body>
-  <div id="wrap">
-    <header id="header">
-      <div class="header__inner">
-        <h1>Mouse Effect <em>02</em></h1>
-      </div>
-    </header>
-    <!-- //header -->
+    <div id="wrap">
+        <header id="header">
+            <div class="header__inner">
+                <h1><a href="index.html">Mouse Effect</a> <em>02</em></h1>
+            </div>
+        </header>
+        <!-- //header -->
 
-    <main id="main">
-      <div class="cursor"></div>
-      <div class="main__inner">
-        <p>JavaScript</p>
-      </div>
-      <div class="main__info">
-        <ul>
-          <li>clientY <span class="clientY">0</span></li>
-          <li>offsetY <span class="offsetY">0</span></li>
-          <li>pageY <span class="pageY">0</span></li>
-          <li>screenY <span class="screenY">0</span></li>
-        </ul>
-      </div>
-    </main>
-    <!-- //main -->
+        <main id="main">
+            <div class="cursor"></div>
+            <div class="main__inner">
+                <p>
+                    <span id="char1">J</span>
+                    <span id="char2">a</span>
+                    <span id="char3">v</span>
+                    <span id="char4">a</span>
+                    <span id="char5">S</span>
+                    <span id="char6">c</span>
+                    <span id="char7">r</span>
+                    <span id="char8">i</span>
+                    <span id="char9">p</span>
+                    <span id="char10">t</span>
+                </p>
+            </div>
+            <div class="main__info">
+                <ul>
+                    <li>clientY <span class="clientY">0</span></li>
+                    <li>offsetY <span class="offsetY">0</span></li>
+                    <li>pageY <span class="pageY">0</span></li>
+                    <li>screenY <span class="screenY">0</span></li>
+                </ul>
+            </div>
+        </main>
+        <!-- //main -->
 
-    <footer id="footer">
-      <div class="footer__inner">
-        <nav>
-          <ul>
-            <li><a href="mouse01.html">01</a></li>
-            <li class="active"><a href="mouse02.html">02</a></li>
-            <li><a href="mouse03.html">03</a></li>
-            <li><a href="mouse04.html">04</a></li>
-          </ul>
-        </nav>
-      </div>
-    </footer>
-    <!-- //footer -->
-  </div>
-  <!-- //wrap -->
-
-
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  <script>
-    // info
-    window.addEventListener("mousemove", function (event) {
-      document.querySelector(".clientY").innerText = event.clientY;
-      document.querySelector(".offsetY").innerText = event.offsetY;
-      document.querySelector(".pageY").innerText = event.pageY;
-      document.querySelector(".screenY").innerText = event.screenY;
-    });
-
-    // mouse
-    document.addEventListener("mousemove", (e) => {
-      gsap.to(".cursor", { duration: 0.6, left: e.clientX - 50, top: e.clientY - 50 })
-    });
+        <footer id="footer">
+            <div class="footer__inner">
+                <nav>
+                    <ul>
+                        <li><a href="mouse01.html">01</a></li>
+                        <li class="active"><a href="mouse02.html">02</a></li>
+                        <li><a href="mouse03.html">03</a></li>
+                        <li><a href="mouse04.html">04</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
+        <!-- //footer -->
+    </div>
+    <!-- //wrap -->
 
 
-  </script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script>
+        // info
+        window.addEventListener("mousemove", function (event) {
+            document.querySelector(".clientY").innerText = event.clientY;
+            document.querySelector(".offsetY").innerText = event.offsetY;
+            document.querySelector(".pageY").innerText = event.pageY;
+            document.querySelector(".screenY").innerText = event.screenY;
+        });
+
+        // mouse
+        document.addEventListener("mousemove", (e) => {
+            gsap.to(".cursor", { duration: 0.6, left: e.clientX - 50, top: e.clientY - 50 })
+        });
+
+        // const text = document.querySelector(".main__inner p");
+
+        // text.addEventListener("mouseover", function () {
+        //     text.style.color = "#FF5733"; // 원하는 색상으로 변경
+        // });
+
+        // text.addEventListener("mouseout", function () {
+        //     text.style.color = "#d2d2d2"; // 마우스가 벗어난 후에 기존 색상으로 변경
+        // });
+
+        const char1 = document.getElementById("char1");
+        const char2 = document.getElementById("char2");
+        // 나머지 글자들에 대한 변수도 추가...
+
+        char1.addEventListener("mouseover", function () {
+            char1.style.color = "#FF5733"; // 원하는 색상으로 변경
+        });
+
+        char1.addEventListener("mouseout", function () {
+            char1.style.color = "#d2d2d2"; // 마우스가 벗어난 후에 기존 색상으로 변경
+        });
+
+        const cursor = document.querySelector(".cursor");
+
+        // 커서 초기 크기 설정
+        let cursorSize = 100;
+
+        // 작아졌다 커졌다 효과 함수
+        function changeCursorSize() {
+            // 작아졌다 커졌다 효과를 위해 0.5초 동안 애니메이션 적용
+            gsap.to(cursor, { duration: 0.5, width: cursorSize, height: cursorSize });
+
+            // 크기를 변경하여 작아졌다 커졌다 효과를 줌
+            cursorSize = (cursorSize === 100) ? 50 : 100; // 크기를 토글링
+        }
+
+        // 매번 커서가 움직일 때마다 작아졌다 커졌다 효과를 적용
+        document.addEventListener("mousemove", (e) => {
+            changeCursorSize();
+            gsap.to(cursor, { duration: 0.6, left: e.clientX - cursorSize / 2, top: e.clientY - cursorSize / 2 });
+        });
+
+    </script>
+
 </body>
 
 </html>
