--- a/effect/index.html
+++ b/effect/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effect</title>
-
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <link href="https://websfont.github.io/nanumSquareNeo/nanumSquareNeo.css" rel="stylesheet">
-
     <style>
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            font-family: 'GmarketSans';
         }
 
         a {
@@ -28,17 +28,17 @@
             width: 100%;
             height: 100vh;
             overflow: hidden;
-            background: linear-gradient(to bottom, #4f0819fc, #04133d, #121514);
+            background: linear-gradient(to bottom, #11e8bb, #8200c9);
         }
 
         main {
             width: 100%;
             height: 100vh;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: center;
             gap: 1%;
-            position: relative;
+            position: absolute;
             left: 0;
             top: 0;
             z-index: 10000;
@@ -48,29 +48,38 @@
             font-size: 5vw;
         }
 
+        main nav ul {
+            display: flex;
+            margin-bottom: 10px;
+        }
+
         main nav li {
             border: 1px solid #000;
-            padding: 10px 20px;
-            margin: 2px;
+            padding: 10px 30px;
+            margin: 5px;
             text-align: center;
-            background-color: rgba(0, 0, 0, 1);
+            background-color: rgba(0, 0, 0, .1);
             backdrop-filter: blur(10px);
             cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        main nav li:hover {
+            backdrop-filter: blur(0px);
+            background-color: rgba(0, 0, 0, 0);
+
         }
     </style>
 </head>
 
 <body>
     <div id="canvas"></div>
+
     <main>
-        <h1>
-            <a href="index.html">Effect</a>
-        </h1>
         <nav>
             <ul>
                 <li><a href="mouse01.html">Mouse</a></li>
-                <li><a href="mouse02.html">Parallax</a></li>
-                <li><a href="mouse02.html">Qsap</a></li>
+                <li><a href="parallax01.html">Parallax</a></li>
             </ul>
         </nav>
     </main>
@@ -79,48 +88,57 @@
     <script>
         // 화면 설정
         const scene = new THREE.Scene();
-        // 카메라 정의
+
+        // 카메라 설정
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-        camera.position.z = 600;
+        camera.position.z = 500;
         scene.add(camera);
+
         // 렌더링 설정
         const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
         renderer.setPixelRatio((window.devicePixelRatio) ? window.devicePixelRatio : 1);
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.getElementById("canvas").appendChild(renderer.domElement);
-        // 오브젝트 설정
+
+        // 오프젝트 설정
         const circle = new THREE.Object3D();
         const net = new THREE.Object3D();
         const particle = new THREE.Object3D();
+
         scene.add(circle);
         scene.add(net);
         scene.add(particle);
-        // 모양설정
+
         // 01
         const geometry1 = new THREE.IcosahedronGeometry(5, 1);
         const material1 = new THREE.MeshPhongMaterial({
-            color: 0xffffff,
+            color: 0xfffff,
             shading: THREE.FlatShading
-        });
+        })
+
         const planet = new THREE.Mesh(geometry1, material1);
-        planet.scale.set(25, 25, 25)
+        planet.scale.set(20, 20, 20);
         circle.add(planet);
+
         // 02
         const geometry2 = new THREE.IcosahedronGeometry(15, 1);
         const material2 = new THREE.MeshPhongMaterial({
-            color: 0xffffff,
-            wireframe: true
-        });
+            color: 0xfffff,
+            wireframe: true,
+        })
+
         const planet2 = new THREE.Mesh(geometry2, material2);
-        planet2.scale.set(14, 14, 14)
+        planet2.scale.set(10, 10, 10);
         net.add(planet2);
+
         // 03
         const geometry3 = new THREE.TetrahedronGeometry(2, 1);
         const material3 = new THREE.MeshPhongMaterial({
-            color: 0xffffff,
+            color: 0xfffff,
             shading: THREE.FlatShading
-        });
-        for (var i = 0; i < 700; i++) {
+        })
+
+        for (let i = 0; i < 700; i++) {
             const planet3 = new THREE.Mesh(geometry3, material3);
             planet3.position.set(Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5).normalize();
             planet3.position.multiplyScalar(90 + (Math.random() * 700));
@@ -130,54 +148,43 @@
 
         // 조명 설정
         const ambientLight = new THREE.AmbientLight(0x999999);
-        scene.add(ambientLight)
+        scene.add(ambientLight);
+
         const lights = [];
-        lights[0] = new THREE.DirectionalLight(0xff0000, 0.1);
+        lights[0] = new THREE.DirectionalLight(0xffffff, 1);
         lights[0].position.set(1, 0, 0);
-        lights[1] = new THREE.DirectionalLight(0xff0000, 0.1);
+        lights[1] = new THREE.DirectionalLight(0x11e8bb, 1);
         lights[1].position.set(0.75, 1, 0.5);
-        lights[2] = new THREE.DirectionalLight(0xff0000, 0.1);
+        lights[2] = new THREE.DirectionalLight(0x8200c9, 1);
         lights[2].position.set(-0.75, -1, 0.5);
-        scene.add(lights[0])
-        scene.add(lights[1])
-        scene.add(lights[2])
+
+        scene.add(lights[0]);
+        scene.add(lights[1]);
+        scene.add(lights[2]);
+
+        // 애니메이션 설정
         function animate() {
-            // circle.rotation.x += 0.005;
-            // circle.rotation.y += 0.005;
-            // circle.rotation.z -= 0.005;
-            // net.rotation.x -= 0.005;
-            // net.rotation.y -= 0.005;
-            // net.rotation.z += 0.005;
-            circle.rotation.set(
-                circle.rotation.x + 0.005,
-                circle.rotation.y + 0.005,
-                circle.rotation.z - 0.005
-            );
-            net.rotation.set(
-                net.rotation.x - 0.005,
-                net.rotation.y - 0.005,
-                net.rotation.z + 0.005
-            );
-            particle.rotation.set(
-                particle.rotation.x - 0.005,
-                particle.rotation.y + 0.005,
-                particle.rotation.z - 0.005
-            );
+            circle.rotation.x += 0.002;
+            circle.rotation.y += 0.002;
+            circle.rotation.z += 0.002;
+            net.rotation.x -= 0.002;
+            net.rotation.y -= 0.002;
+            net.rotation.z -= 0.002;
+            particle.rotation.y += 0.003;
+
             requestAnimationFrame(animate);
             renderer.render(scene, camera);
         }
-        animate();  //애니메이션 시작
+        animate();
 
+        // 화면 사이트 설정
         function onWindowResize() {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight)
+            renderer.setSize(window.innerWidth, window.innerHeight);
         }
-        window.addEventListener('resize', () => { onWindowResize() })
+        window.addEventListener("resize", onWindowResize);
     </script>
-
-
-
 </body>
 
 </html>
