--- a/javascript/object01.html
+++ b/javascript/object01.html
@@ -38,37 +38,36 @@
 
     <main id="main">
         <div class="main__menu container">
-
+            <ul>
+                <li><a href="#">01. if문</a></li>
+            </ul>
         </div>
-        <!--//main__menu  -->
+        <!-- //main__menu -->
 
         <div class="main__sample container">
             <div id="sample01" class="sample">
-                <h3></h3>
+                <h3>01. 변수 : 데이터 저장</h3>
                 <p>
+                    자바스크립트에서 변수는 값을 저정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
-                <pre class="line-numbers"><code class="language-js">                  
-                                          
-                </code></pre>
-                <div class="result">
-                    <details>
-                        <summary>결과 확인하기</summary>
-                        <div>
+                <pre><code>{
 
-                        </div>
-                    </details>
-                </div>
+}</code></pre>
             </div>
             <!-- //sample01 -->
-
         </div>
-        <!-- footer -->
-        <footer id="footer">
+        <!-- //main__sample -->
+    </main>
+    <!-- //main -->
 
-        </footer>
-        <!-- //footer -->
+    <footer id="footer">
 
+    </footer>
+    <!-- //footer -->
+
+    <script src="assets/js/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
-
 
 </html>
