--- a/javascript/object07.html
+++ b/javascript/object07.html
@@ -39,25 +39,36 @@
         <div class="main__menu container">
             <h2>마우스</h2>
             <ul>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("click) : 클릭했을 때</a></li>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("dblclick) : 더블 클릭했을 때</a></li>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("load") : 문서 로딩이 끝났을 때</a></li>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("error") : 문서가 정확히 로딩되지 않았을 때</a></li>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("scroll") :스크롤 했을 때</a></li>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("resize") : 브라우저 사이즈가 변경 됐을 때</a></li>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("selectatart") : 텍스트 선택을 시작 했을 때</a></li>
-
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("click") : 클랙했을 때</a></li>
+                <li><a href="#">02. 이벤트 메서드 : addEventListerner("dblclick") : 더블 클랙했을 때</a></li>
+                <li><a href="#">03. 이벤트 메서드 : addEventListerner("load") : 문서 로딩이 끝났을 때</a></li>
+                <li><a href="#">04. 이벤트 메서드 : addEventListerner("DOMContentLoaded") : 문서의 초기 HTML이 로드되고 파싱됐을 때</a></li>
+                <li><a href="#">05. 이벤트 메서드 : addEventListerner("error") : 문서가 정확히 로딩되지 않았을 때</a></li>
+                <li><a href="#">06. 이벤트 메서드 : addEventListerner("scroll") : 스크롤 했을 때</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListerner("resize") : 브라우저 사이즈가 변경 됐을 때</a></li>
+                <li><a href="#">08. 이벤트 메서드 : addEventListerner("selectstart") : 텍스트 선택을 시작했을 때</a></li>
             </ul>
 
             <h2>마우스 포인터</h2>
             <ul>
                 <li><a href="#">01. 이벤트 메서드 : addEventListerner("mousedown") : 마우스 버튼을 클릭했을 때</a></li>
-                <li><a href="#">02. 이벤트 메서드 : addEventListerner("mouseup") : 마우스 버튼을 때는 경우</a></li>
+                <li><a href="#">02. 이벤트 메서드 : addEventListerner("mouseup") : 마우스 버튼을 떼는 경우</a></li>
                 <li><a href="#">03. 이벤트 메서드 : addEventListerner("mousemove") : 마우스를 움직이는 경우</a></li>
-                <li><a href="#">04. 이벤트 메서드 : addEventListerner("mouseenter") : 요소 위에 </a></li>
-                <li><a href="#">05. 이벤트 메서드 : addEventListerner("mouseleave") :때</a></li>
-                <li><a href="#">06. 이벤트 메서드 : addEventListerner("mouseover") : 을 때</a></li>
-                <li><a href="#">07. 이벤트 메서드 : addEventListerner("mouseout") : 했을 때</a></li>
+                <li><a href="#">04. 이벤트 메서드 : addEventListerner("mouseenter") : 요소 위에 포인터 요소 위치가 있을 때</a></li>
+                <li><a href="#">05. 이벤트 메서드 : addEventListerner("mouseleave") : 요소 위에 포인터 요소 위치가 벗어 났을 때</a></li>
+                <li><a href="#">06. 이벤트 메서드 : addEventListerner("mouseover") : 요소 위에 포인터 요소 위치가 있을 때</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListerner("mouseout") : 요소 위에 포인터 요소 위치가 벗어 났을 때</a></li>
+            </ul>
+
+            <h2>마우스 드래그</h2>
+            <ul>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("drag") : 드래그 중인 경우</a></li>
+                <li><a href="#">02. 이벤트 메서드 : addEventListerner("dragstart") : 드래그를 시작한 경우</a></li>
+                <li><a href="#">03. 이벤트 메서드 : addEventListerner("dragend") : 드래그 끝난 경우</a></li>
+                <li><a href="#">04. 이벤트 메서드 : addEventListerner("dragenter") : 요소 위치에 드래그 했을 때</a></li>
+                <li><a href="#">05. 이벤트 메서드 : addEventListerner("dragover"): 요소의 위치 위에 있을 때</a></li>
+                <li><a href="#">06. 이벤트 메서드 : addEventListerner("dragleave") : 요소의 위치 위에서 벗어 났을 때</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListerner("drop"): 요소의 위치에 드롭 했을 때</a></li>
             </ul>
 
             <h2>마우스 속성</h2>
@@ -71,32 +82,33 @@
                 <li><a href="#">07. 이벤트 속성 : screenX : 디바이스 기준</a></li>
                 <li><a href="#">08. 이벤트 속성 : screenY : 디바이스 기준</a></li>
             </ul>
-
-            <h2>마우스 드래그</h2>
-            <ul>
-                <li><a href="#">01. 이벤트 메서드 : addEventListerner("drag") : 드래그 중인 경우</a></li>
-                <li><a href="#">02. 이벤트 메서드 : addEventListerner("dragstart") : 드래그를 시작한 경우</a></li>
-                <li><a href="#">03. 이벤트 메서드 : addEventListerner("dragend") : 드래그가 끝난 경우</a></li>
-                <li><a href="#">04. 이벤트 메서드 : addEventListerner("dragenter") : 요소 위치에 드래그 했을 경우</a></li>
-                <li><a href="#">05. 이벤트 메서드 : addEventListerner("dragover") : 요소의 위치 위에 있을 경우</a></li>
-                <li><a href="#">06. 이벤트 메서드 : addEventListerner("dragleave") : 요소의 위치 위에서 벗어 났을 경우</a></li>
-                <li><a href="#">07. 이벤트 메서드 : addEventListerner("drop") : 요소의 위치에 드롭 했을 경우</a></li>
-
-            </ul>
-
         </div>
-        <!--//main__menu  -->
+        <!-- //main__menu -->
 
-        <script>
+        <div class="main__sample container">
+            <div id="sample01" class="sample">
+                <h3>01. 변수 : 데이터 저장</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 저정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
 
+}</code></pre>
+            </div>
+            <!-- //sample01 -->
+        </div>
+        <!-- //main__sample -->
+    </main>
+    <!-- //main -->
 
+    <footer id="footer">
 
+    </footer>
+    <!-- //footer -->
 
-
-
-
-        </script>
+    <script src="assets/js/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
-
 
 </html>
